--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,36 @@
 .App {
   text-align: center;
+  margin-top: 20px;
 }
 
-/* div {
-  margin-top: 20px;
-} */
+img {
+  width: 70%;
+}
+
+h1, h2 {
+  padding-right: 15%;
+  padding-left: 15%;
+}
+
+p {
+  text-align: justify;
+  padding-right: 15%;
+  padding-left: 15%;
+}
+
+@media (max-width: 576px) {
+  img {
+    width: 90%;
+  }
+  
+  h1, h2 {
+    padding-right: 5%;
+    padding-left: 5%;
+  }
+  
+  p {
+    text-align: justify;
+    padding-right: 5%;
+    padding-left: 5%;
+  }
+}
