--- a/src/App.css
+++ b/src/App.css
@@ -4,18 +4,21 @@
 }
 
 img {
-  width: 70%;
+  width: 40%;
 }
 
 h1, h2 {
-  padding-right: 15%;
-  padding-left: 15%;
+  padding-right: 30%;
+  padding-left: 30%;
+  font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 p {
   text-align: justify;
   padding-right: 15%;
   padding-left: 15%;
+  font-family: Couchin, Georgia, 'Times New Roman', Times, serif;
+  font-size: 18px;
 }
 
 @media (max-width: 576px) {
